[project]
name = "infinity"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"

[tool.poetry.group.training.dependencies]
torch = "^2.8.0"
onnxscript = "^0.5.3"
onnx = "^1.19.0"
torchvision = "^0.23.0"

[tool.poetry.group.documentation.dependencies]
git-cliff = "^2.10.1"

[tool.poetry.group.lichess-bot.dependencies]
requests = "^2.32.5"