[project]
name = "aleph"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"

[tool.poetry.group.documentation.dependencies]
git-cliff = "^2.10.1"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.21"
mike = "^2.1.3"

[tool.poetry.group.lichess-bot.dependencies]
requests = "^2.32.5"

[tool.poetry.group.training.dependencies]
onnx = "^1.19.0"
onnxscript = "^0.5.3"
torch = "^2.8.0"
torchvision = "^0.23.0"